--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <html>
-	<head>
-		<link rel="stylesheet" href="index.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet" />
-	</head>
-	<body>
-		<main>
-			<div class="content">
-				<div>Unsolved is a research collective.</div>
-				<div>We sketch portraits of science and humanities using media arts.</div>
-				<div>We strive for exceptional storytelling.</div>
-				<div>We communicate scientific research & cultural concepts to mobilize resources for pressing global challenges.</div>
-				<div>
-					In conversations with scientists, innovators, and policy makers, we glance at the future through the lens that researchers and practitioners
-					across disciplines create with passion, conviction, and mastery of their field.
-				</div>
-				<div>We aim to explore solutions to currently overlooked challenges affecting our future that remain unsolved today.</div>
-			</div>
-			<div class="logo">
-				<svg fill="none" viewBox="0 0 98 33" xmlns="http://www.w3.org/2000/svg" style="display: block">
-					<path
-						clip-rule="evenodd"
-						d="M64.894 16.456c0 9.088-7.368 16.456-16.457 16.456s-16.455-7.368-16.455-16.456S39.349 0 48.438 0s16.455 7.368 16.455 16.456zM16.902 1.567a.784.784 0 0 1 1.358 0L35.056 30.66a.784.784 0 0 1-.679 1.176H.785a.784.784 0 0 1-.679-1.176zM68.614.98c-.865 0-1.567.702-1.567 1.568v27.818c0 .866.702 1.567 1.567 1.567h27.819c.865 0 1.567-.701 1.567-1.567V2.547c0-.866-.702-1.568-1.567-1.568z"
-						fill="currentColor"
-						fill-rule="evenodd"
-					></path>
-				</svg>
-			</div>
-		</main>
-	</body>
+  <head>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap"
+      rel="stylesheet"
+    />
+    <title>differentia\\</title>
+  </head>
+  <body>
+    <main>
+      <div class="content">
+        <div>differentia\\ is a modular research collective.</div>
+        <div>
+          We sketch portraits of science and humanities using media arts.
+        </div>
+        <div>
+          We strive for exceptional storytelling. We believe in its power to
+          effectively communicate scientific research & cultural concepts and
+          mobilize resources to address pressing global challenges.
+        </div>
+        <div>
+          In conversations with artists, scientists and innovators, we glance at
+          the future through the lens that researchers and practitioners across
+          disciplines create with passion, conviction, and mastery of their
+          field.
+        </div>
+        <div>
+          We aim to explore solutions to challenges affecting the future of
+          Humanity that remain unsolved today.
+        </div>
+      </div>
+      <div class="logo">
+        <svg
+          fill="none"
+          viewBox="0 0 98 33"
+          xmlns="http://www.w3.org/2000/svg"
+          style="display: block"
+        >
+          <path
+            clip-rule="evenodd"
+            d="M64.894 16.456c0 9.088-7.368 16.456-16.457 16.456s-16.455-7.368-16.455-16.456S39.349 0 48.438 0s16.455 7.368 16.455 16.456zM16.902 1.567a.784.784 0 0 1 1.358 0L35.056 30.66a.784.784 0 0 1-.679 1.176H.785a.784.784 0 0 1-.679-1.176zM68.614.98c-.865 0-1.567.702-1.567 1.568v27.818c0 .866.702 1.567 1.567 1.567h27.819c.865 0 1.567-.701 1.567-1.567V2.547c0-.866-.702-1.568-1.567-1.568z"
+            fill="currentColor"
+            fill-rule="evenodd"
+          ></path>
+        </svg>
+      </div>
+    </main>
+  </body>
 </html>
